<resources>
    <string name="photo_picker_title">Portkey Photo Picker</string>

    <string name="label_tool_text">Text tool</string>
    <string name="label_tool_emoji">Emoji tool</string>
    <string name="label_tool_brush">Brush tool</string>
    <string name="label_tool_eraser">Eraser tool</string>

    <string name="text_placeholder">your text here</string>

    <string name="main_placeholder">Still working on this! Tap the + to continue.</string>

    <string name="capture_button_alt">Capture</string>
    <string name="flip_button_alt">Flip camera</string>
    <string name="flash_button_alt">Flash</string>
    <string name="stickers_button_alt">Stickers</string>
    <string name="more_button_alt">More</string>
    <string name="text_button_alt">Text</string>
    <string name="sound_button_alt">Sound</string>
    <string name="label_control_flip_camera">Flip</string>
    <string name="label_control_upload">Upload</string>
    <string name="label_control_flash">Flash</string>
    <string name="label_control_stickers">Stickers</string>
    <string name="label_control_text">Text</string>
    <string name="label_control_sound_on">Sound on</string>
    <string name="label_control_sound_off">Sound off</string>
    <string name="label_control_save">Save</string>
    <string name="label_control_saving">Saving</string>
    <string name="label_control_saved">Saved</string>
    <string name="label_control_retry">Retry</string>
    <string name="label_control_retrying">retrying</string>
    <string name="label_snackbar_loop_frame_saved">Saved to photos</string>
    <string name="label_snackbar_share">SHARE</string>
    <string name="label_share_to">Share to</string>
    <string name="label_remove">Drag here to remove</string>
    <string name="label_done">Done</string>
    <string name="label_control_publish">Publish</string>
    <string name="label_control_next">Next</string>
    <string name="label_saving">Saving...</string>

    <string name="menu_delete_page">Delete page</string>
    <string name="menu_save_page">Save page</string>

    <string name="dialog_discard_page_title">Delete story page?</string>
    <string name="dialog_discard_page_message">This page will be removed from your story.</string>
    <string name="dialog_discard_errored_page_message">This page has not been saved yet. If you delete this page, you will lose any edits you have made.</string>
    <string name="dialog_discard_page_ok_button">Delete</string>

    <string name="dialog_discard_story_title">Discard Story?</string>
    <string name="dialog_discard_story_message">If you discard this story it will not be saved as a draft.</string>
    <string name="dialog_discard_story_ok_button">Discard</string>

    <!-- Intro -->
    <string name="get_started">Get Started</string>

    <string name="intro_title_text">Loop</string>
    <string name="intro_promo_text_share">Create and share stories with the people you care about most.</string>
    <string name="intro_promo_text_create">Bring your stories to life with stickers, audio, links, music, and more.</string>
    <string name="intro_promo_text_organize">Group your stories by topic and update them whenever you have a new chapter to add.</string>
    <string name="intro_promo_text_control">Your stories belong to you, share them only with who you want.</string>
    <string name="intro_promo_text_invite">Invite others to create stories together.</string>

    <string name="permissions_message">Allow Loop to access your camera, microphone, and local storage.</string>
    <string name="permissions_turn_on">Turn On</string>

    <!-- Photo picker    -->
    <string name="photo_picker_thumbnail_desc">Play video</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="photo_picker_choose_video">Choose video from device</string>
    <string name="photo_picker_choose_photo">Choose photo from device</string>
    <string name="confirm">Confirm</string>
    <string name="photo_picker_use_photo">Use this photo</string>
    <string name="photo_picker_use_video">Use this video</string>
    <string name="cab_selected">%d selected</string>
    <string name="media_empty_list">You don\'t have any media</string>
    <string name="photo_picker_soft_ask_allow">Allow</string>
    <string name="photo_picker_soft_ask_label">%s needs permissions to access your photos</string>
    <string name="photo_picker_device_desc">pick from device</string>
    <string name="photo_picker_camera_desc">open camera</string>
    <string name="photo_picker_wpmedia_desc">pick from WordPress media</string>
    <string name="content_description_person_reading_device_notification">Person reading device with notifications</string>

    <!-- Photo picker - Portkey   -->
    <string name="photo_picker_add_photos_to_story">Choose the photos and videos you\'d like to add to your story</string>
    <!-- SD Card errors -->
    <string name="sdcard_title">SD Card Required</string>
    <string name="sdcard_message">A mounted SD card is required to upload media</string>

    <!--preference keys-->
    <string name="pref_camera_selection" translatable="false">pref_camera_selection</string>
    <string name="pref_flash_mode_selection" translatable="false">pref_flash_mode_selection</string>
    <string name="pref_key_send_crash" translatable="false">pref_key_send_crash</string>

    <!-- Save Frame process strings-->
    <string name="story_saving_untitled">Untitled</string>
    <string name="story_saving_title">Saving "%1$s"...</string>
    <string name="story_saving_title_several">several stories</string>
    <string name="story_saving_subtitle_frames_remaining_singular">1 page remaining</string>
    <string name="story_saving_subtitle_frames_remaining_plural">%1$d pages remaining</string>
    <string name="story_saving_snackbar_started">Uploading "%1$s"...</string>
    <string name="story_saving_snackbar_finished_successfully">"%1$s" published</string>
    <string name="story_saving_snackbar_finished_with_error">Unable to upload "%1$s"</string>

    <!-- Save Frame process error notification strings-->
    <string name="story_saving_failed_title">Unable to upload "%1$s"</string>
    <string name="story_saving_failed_message_singular">1 page requires action</string>
    <string name="story_saving_failed_message_plural">%1$d pages require action</string>
    <string name="story_saving_failed_quick_action_manage">Manage</string>

    <!-- Save Frame process error dialog strings-->
    <string name="dialog_story_saving_error_title_singular">Unable to save 1 page</string>
    <string name="dialog_story_saving_error_title_plural">Unable to save %1$d pages</string>
    <string name="dialog_story_saving_error_message">Retry saving or delete the pages, then try publishing your story again.</string>
    <!-- Insufficient device storage dialog strings-->
    <string name="dialog_insufficient_device_storage_error_title">Insufficient device storage</string>
    <string name="dialog_insufficient_device_storage_error_message">We need to save the story on your device before it can be published. Review your storage settings and remove files to free up space.</string>
    <string name="dialog_insufficient_device_storage_error_ok_button">View Storage</string>

    <!-- WordPress Android strings - matching in case of future integration -->
    <!-- Android O notification channels, these show in the Android app settings -->
    <string name="notification_channel_general_title">General</string>
    <string name="notification_channel_important_title">Important</string>
    <string name="notification_channel_transient_title">Transient</string>
    <string name="notification_channel_reminder_title">Reminder</string>

    <string name="notification_channel_normal_id" translatable="false">wpandroid_notification_normal_channel_id</string>
    <string name="notification_channel_important_id" translatable="false">wpandroid_notification_important_channel_id</string>
    <string name="notification_channel_transient_id" translatable="false">wpandroid_notification_transient_channel_id</string>
    <string name="notification_channel_reminder_id" translatable="false">wpandroid_notification_reminder_channel_id</string>
</resources>
