<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/white">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/pink_50"
        android:tint="@color/white"
        android:src="@drawable/ic_photo_camera_24px"
        android:layout_margin="@dimen/fab_margin"
        tools:ignore="InconsistentLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_choose_items_to_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_picker_add_photos_to_story"
            android:textSize="@dimen/text_sz_large"
            android:textColor="@color/black"
            android:layout_margin="@dimen/margin_extra_large"
            tools:ignore="InconsistentLayout"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">
            <com.wordpress.stories.compose.photopicker.EmptyViewRecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_bar"
                android:fadeScrollbars="true"
                android:scrollbars="vertical"/>

            <com.wordpress.stories.compose.photopicker.ActionableEmptyView
                android:id="@+id/actionable_empty_view"
                android:layout_above="@+id/bottom_bar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:aevImage="@drawable/img_illustration_media_105dp"
                app:aevTitle="@string/media_empty_list"
                tools:visibility="visible" >
            </com.wordpress.stories.compose.photopicker.ActionableEmptyView>

            <com.wordpress.stories.compose.photopicker.ActionableEmptyView
                android:id="@+id/soft_ask_view"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:aevButton="@string/photo_picker_soft_ask_allow"
                app:aevImage="@drawable/img_illustration_media_105dp"
                app:aevTitle="@string/photo_picker_soft_ask_label"
                tools:visibility="visible" >
            </com.wordpress.stories.compose.photopicker.ActionableEmptyView>

            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/white"
                android:orientation="vertical"
                tools:ignore="InconsistentLayout">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_divider_height"
                    android:background="@color/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_picker"
                        android:layout_width="@dimen/photo_picker_icon"
                        android:layout_height="@dimen/photo_picker_icon"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/photo_picker_device_desc"
                        android:src="@drawable/media_bar_button_image_multiple"
                        tools:ignore="InefficientWeight"/>

                    <!--<ImageView-->
                        <!--android:id="@+id/icon_camera"-->
                        <!--android:layout_width="@dimen/photo_picker_icon"-->
                        <!--android:layout_height="@dimen/photo_picker_icon"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="?android:selectableItemBackground"-->
                        <!--android:contentDescription="@string/photo_picker_camera_desc"-->
                        <!--android:src="@drawable/media_bar_button_camera"/>-->

                    <!--<ImageView-->
                        <!--android:id="@+id/icon_wpmedia"-->
                        <!--android:layout_width="@dimen/photo_picker_icon"-->
                        <!--android:layout_height="@dimen/photo_picker_icon"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="?android:selectableItemBackground"-->
                        <!--android:contentDescription="@string/photo_picker_wpmedia_desc"-->
                        <!--android:src="@drawable/media_bar_button_library"/>-->
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
